fix: fix padding and text align styling errors on mobile devices

--- a/src/components/sections/ImageListSectionRatio2_3.module.css
+++ b/src/components/sections/ImageListSectionRatio2_3.module.css
@@ -135,7 +135,7 @@
 
 @media screen and (max-width: 500px) {
     .imageTextSection {
-        width: 95%;
+        width: 85%;
     }
 
     .tableCol2Ratio3_2 {
